Refactored some classed