@@ -24,7 +24,7 @@ public class ArrayKeyInput extends GeneralInput {
     @Override
     public String getJsonFormat(List<GeneralInput> generalInputs) {
 
-        var children = generalInputs.stream().filter(entry -> this.getEntryID().equals(entry.getParentId())).collect(Collectors.toList());
+        var children = generalInputs.stream().filter(entry -> this.getEntryID().equals(entry.getParentId())).toList();
 
         var allKeyValueChildren = children.stream().filter(a -> !(a instanceof ConstantValue))
                 .map(child -> child.getJsonFormat(generalInputs)).collect(Collectors.joining(",", "{", "}"));
@@ -39,7 +39,7 @@ public class ArrayKeyInput extends GeneralInput {
         if (this.isUndefined()) {
             return "";
         } else {
-            var children = generalInputs.stream().filter(entry -> this.getEntryID().equals(entry.getParentId())).collect(Collectors.toList());
+            var children = generalInputs.stream().filter(entry -> this.getEntryID().equals(entry.getParentId())).toList();
             var allKeyValueChildren = children.stream().filter(a -> !(a instanceof ConstantValue))
                     .map(child -> child.getJsonWithData(generalInputs)).collect(Collectors.joining(",", "{", "}"));
             var allOnlyValueChildren = children.stream().filter(a -> (a instanceof ConstantValue))
